[fix bug 1228341] - Fix protocol relative links on annual report pages

--- a/bedrock/foundation/templates/foundation/annualreport/2009/index.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/index.html
@@ -70,9 +70,9 @@
       2010</cite>{% endtrans %}</p>
   </blockquote>
 
-  <a href="//www.flickr.com/photos/gen/4784616521/"
+  <a href="https://www.flickr.com/photos/gen/4784616521/"
      title="Mozilla Summit 2010 by Gen Kanai, on Flickr"><img
-      src="//farm5.static.flickr.com/4138/4784616521_abb49923c7_z.jpg"
+      src="https://farm5.static.flickr.com/4138/4784616521_abb49923c7_z.jpg"
       width="610" height="443" alt="Mozilla Summit 2010"/></a>
 
 {% endblock %}
