--- a/bedrock/foundation/templates/foundation/annualreport/2010/ahead.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/ahead.html
@@ -17,9 +17,9 @@
   <figure class="figure">
     <div class="mozilla-video-control">
       <video width="640" height="360" controls="controls" poster="{{ static('img/foundation/annualreport/2010/poster-ahead.jpg') }}">
-        <source src="//videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.webm" type='video/webm; codecs="vp8, vorbis"' />
-        <source src="//videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-        <source src="//videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.theora%202.ogv" type='video/ogg; codecs="theora, vorbis"' />
+        <source src="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.webm" type='video/webm; codecs="vp8, vorbis"' />
+        <source src="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+        <source src="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.theora%202.ogv" type='video/ogg; codecs="theora, vorbis"' />
       </video>
     </div>
   </figure>
@@ -30,10 +30,10 @@
 
     <p class="download">{{ _('Download this video:') }}</p>
     <ul class="download">
-      <li><a href="//videos.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.webm">{{ _('WebM format') }}</a></li>
-      <li><a href="//videos.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.theora%202.ogv">{{ _('Ogg Theora format') }}</a></li>
-      <li><a href="//videos.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.mp4">{{ _('MPEG-4 format') }}</a></li>
-      <li><a href="//www.universalsubtitles.org/en/videos/6rwEfcRrITSP/">{{ _('Other languages & sharing') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.webm">{{ _('WebM format') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.theora%202.ogv">{{ _('Ogg Theora format') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/serv/brand/State%20of%20Mozilla%202011%20(fcp2)-RC%20-%20720p%20-%20MPEG-4.mp4">{{ _('MPEG-4 format') }}</a></li>
+      <li><a href="http://www.universalsubtitles.org/en/videos/6rwEfcRrITSP/">{{ _('Other languages & sharing') }}</a></li>
     </ul>
   </div>
 
