--- a/bedrock/foundation/templates/foundation/annualreport/2010/faq.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/faq.html
@@ -45,12 +45,12 @@
   <div class="content-block pdf">
       <div>
         {{ _('2010 Audited Financial Statement') }}<br/>
-        <a href="http://static.mozilla.com/moco/en-US/pdf/Mozilla%20Foundation%20and%20Subsidiaries%202010%20Audited%20Financial%20Statement.pdf" class="button">{{ _('Download PDF') }}</a>
+        <a href="https://static.mozilla.com/moco/en-US/pdf/Mozilla%20Foundation%20and%20Subsidiaries%202010%20Audited%20Financial%20Statement.pdf" class="button">{{ _('Download PDF') }}</a>
       </div>
 
       <div>
         {{ _('2010 Form 990') }}<br/>
-        <a href="http://static.mozilla.com/moco/en-US/pdf/Mozilla%20Foundation%20-%202010%20Public%20Disclosure%20990.pdf" class="button">{{ _('Download PDF') }}</a>
+        <a href="https://static.mozilla.com/moco/en-US/pdf/Mozilla%20Foundation%20-%202010%20Public%20Disclosure%20990.pdf" class="button">{{ _('Download PDF') }}</a>
       </div>
   </div>
 
