--- a/bedrock/foundation/templates/foundation/annualreport/2010/opportunities.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/opportunities.html
@@ -66,12 +66,12 @@
 
     <h3>{{ _('Identity') }}</h3>
 
-    <p>{% trans identity="//identity.mozilla.com/" %}Today’s Web needs an open source, standards-based platform for universally accessible, decentralized, customized <a href="{{ identity }}">identity</a> on the Web. Mozilla has set about building it, with the BrowserID project as a first step. Browser ID is a secure, decentralized, open source, cross-browser way to sign onto websites using your email address.{% endtrans %}</p>
+    <p>{% trans identity="http://identity.mozilla.com/" %}Today’s Web needs an open source, standards-based platform for universally accessible, decentralized, customized <a href="{{ identity }}">identity</a> on the Web. Mozilla has set about building it, with the BrowserID project as a first step. Browser ID is a secure, decentralized, open source, cross-browser way to sign onto websites using your email address.{% endtrans %}</p>
 
     <h3>{{ _('Apps') }}</h3>
 
     <p>
-      {% trans apps="https://apps.mozillalabs.com/", features="//blog.lizardwrangler.com/2011/08/09/the-app-model-and-the-web/" %}
+      {% trans apps="https://marketplace.firefox.com/", features="https://blog.lizardwrangler.com/2011/08/09/the-app-model-and-the-web/" %}
           <a href="{{ apps }}">Apps</a> represent a new, convenient way of interacting with the Internet,
           but they lack <a href="{{ features }}">a number of the features</a> that are great about the Web.
           The Mozilla open app ecosystem will let users take their apps with them across platforms and devices.
@@ -79,11 +79,11 @@
 
     <h3>{{ _('Education') }}</h3>
 
-    <p>{% trans webcraft="//p2pu.org/webcraft", hack="//hackasaurus.org/", badges="//openbadges.org/" %}Mozilla’s education programs are designed to inspire a new generation of Webmakers. The <a href="{{ webcraft }}">School of Webcraft</a> teaches open Web development skills through peer-to-peer collaboration, community and mentorship. The <a href="{{ hack }}">Mozilla Hackasaurus</a> program teaches youth the building blocks of Web technology and development. Mozilla is also developing new approaches to recognizing online learning through our <a href="{{ badges }}">Open Badges</a> project.{% endtrans %}</p>
+    <p>{% trans webcraft="https://p2pu.org/webcraft", hack="http://hackasaurus.org/", badges="http://openbadges.org/" %}Mozilla’s education programs are designed to inspire a new generation of Webmakers. The <a href="{{ webcraft }}">School of Webcraft</a> teaches open Web development skills through peer-to-peer collaboration, community and mentorship. The <a href="{{ hack }}">Mozilla Hackasaurus</a> program teaches youth the building blocks of Web technology and development. Mozilla is also developing new approaches to recognizing online learning through our <a href="{{ badges }}">Open Badges</a> project.{% endtrans %}</p>
 
     <h3>{{ _('Media') }}</h3>
 
-    <p>{% trans movies="//webmademovies.org/", journalism="//drumbeat.org/journalism", subtitles="//www.universalsubtitles.org", openvideo="//openvideoalliance.org/", bavc="//www.bavc.org/" %}Mozilla supports programs and tools that bring openness and innovation to online media. These include <a href="{{ movies }}">Web Made Movies</a>, an open video lab joining filmmakers and Web developers. Mozilla’s partnership with the Knight Foundation similarly brings together Web innovators, journalists and respected news organizations to drive <a href="{{ journalism }}">innovation in journalism</a>. Mozilla also supports projects like <a href="{{ subtitles }}">Universal Subtitles</a>, the <a href="{{ openvideo }}">Open Video Alliance</a> and the <a href="{{ bavc }}">Bay Area Video Coalition</a>.{% endtrans %}</p>
+    <p>{% trans movies="https://popcorn.webmaker.org/", journalism="http://drumbeat.org/journalism", subtitles="https://www.universalsubtitles.org", openvideo="http://openvideoalliance.org/", bavc="https://www.bavc.org/" %}Mozilla supports programs and tools that bring openness and innovation to online media. These include <a href="{{ movies }}">Web Made Movies</a>, an open video lab joining filmmakers and Web developers. Mozilla’s partnership with the Knight Foundation similarly brings together Web innovators, journalists and respected news organizations to drive <a href="{{ journalism }}">innovation in journalism</a>. Mozilla also supports projects like <a href="{{ subtitles }}">Universal Subtitles</a>, the <a href="{{ openvideo }}">Open Video Alliance</a> and the <a href="{{ bavc }}">Bay Area Video Coalition</a>.{% endtrans %}</p>
 
     <h3>{{ _('WebFWD') }}</h3>
 
