--- a/bedrock/foundation/templates/foundation/annualreport/2010/people.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/people.html
@@ -27,21 +27,21 @@
       <img src="{{ static('img/foundation/annualreport/2010/photo-arabic-mozilla.jpg') }}" width="425" height="275" alt="{{ _('Arabic Mozilla') }}" />
       <p>{{ _('Arabic Mozilla') }}</p>
     </div>
-    <p>{% trans arabicmozilla="//www.arabicmozilla.org/", inaugural="//pierros.papadeas.gr/?p=253" %}Communities and locales in the Arabic-speaking world experienced inspiring growth this year and came together to form a collective community called <a href="{{ arabicmozilla }}">ArabicMozilla</a>. Participating countries include Egypt, Jordan, Tunisia, Algeria, Lebanon, Palestine, Syria, Morocco and Sudan. In July, Mozilla Jordan hosted the region’s <a href="{{ inaugural }}">inaugural inter-community meetup</a> in Amman.{% endtrans %}</p>
+    <p>{% trans arabicmozilla="http://www.arabicmozilla.org/", inaugural="http://pierros.papadeas.gr/?p=253" %}Communities and locales in the Arabic-speaking world experienced inspiring growth this year and came together to form a collective community called <a href="{{ arabicmozilla }}">ArabicMozilla</a>. Participating countries include Egypt, Jordan, Tunisia, Algeria, Lebanon, Palestine, Syria, Morocco and Sudan. In July, Mozilla Jordan hosted the region’s <a href="{{ inaugural }}">inaugural inter-community meetup</a> in Amman.{% endtrans %}</p>
 
     <div class="img-left">
       <img src="{{ static('img/foundation/annualreport/2010/photo-mozilla-kenya.jpg') }}" width="294" height="198" alt="{{ _('Mozilla Kenya') }}" />
       <p>{{ _('Mozilla Kenya') }}</p>
     </div>
-    <p>{% trans ghana="//mozilla-ghana.org", kenya="//www.mozilla-kenya.org/", outreach="//www.mozilla-kenya.org/blog/18-road-trip" %}Representatives from <a href="{{ ghana }}">Mozilla Ghana</a> have begun participating in technical events and <a href="{{ kenya }}">Mozilla Kenya’s</a> community coordinator Alex Wafula has started an <a href="{{ outreach }}">outreach project</a> with universities across the country.{% endtrans %}</p>
+    <p>{% trans ghana="http://mozilla-ghana.org", kenya="http://www.mozilla-kenya.org/", outreach="http://www.mozilla-kenya.org/blog/18-road-trip" %}Representatives from <a href="{{ ghana }}">Mozilla Ghana</a> have begun participating in technical events and <a href="{{ kenya }}">Mozilla Kenya’s</a> community coordinator Alex Wafula has started an <a href="{{ outreach }}">outreach project</a> with universities across the country.{% endtrans %}</p>
 
-    <p>{% trans hispano="//www.mozilla-hispano.org", local=url('mozorg.contribute') %}Mozilla Cuba and Mozilla Nicaragua were organized and launched by local volunteers. At the same time, our <a href="{{ hispano }}">Mozilla Hispano</a> community has continued to thrive, expanding its ranks to 11 Spanish-speaking countries (find <a href="{{ local }}#location">full list of local communities here</a>).{% endtrans %}</p>
+    <p>{% trans hispano="http://www.mozilla-hispano.org", local=url('mozorg.contribute') %}Mozilla Cuba and Mozilla Nicaragua were organized and launched by local volunteers. At the same time, our <a href="{{ hispano }}">Mozilla Hispano</a> community has continued to thrive, expanding its ranks to 11 Spanish-speaking countries (find <a href="{{ local }}#location">full list of local communities here</a>).{% endtrans %}</p>
 
     <div class="img-right">
       <img src="{{ static('img/foundation/annualreport/2010/photo-mozilla-indonesia.jpg') }}" width="187" height="249" alt="{{ _('Mozilla Indonesia') }}" />
       <p>{{ _('Mozilla Indonesia') }}</p>
     </div>
-    <p>{% trans indonesia="//www.mozilla.web.id/" %}The <a href="{{ indonesia }}">Mozilla community in Indonesia</a> has developed an Indonesian mascot character, “Kumi,” which  has been  celebrated and distributed as a paper toy at many of this  year’s  events. The community now has regional leaders in the five largest cities in Indonesia, which have been actively promoting Mozilla and Firefox. Thanks to the enthusiasm and passion of this community, Firefox enjoys the largest market share in the world in Indonesia.{% endtrans %}</p>
+    <p>{% trans indonesia="http://www.mozilla.web.id/" %}The <a href="{{ indonesia }}">Mozilla community in Indonesia</a> has developed an Indonesian mascot character, “Kumi,” which  has been  celebrated and distributed as a paper toy at many of this  year’s  events. The community now has regional leaders in the five largest cities in Indonesia, which have been actively promoting Mozilla and Firefox. Thanks to the enthusiasm and passion of this community, Firefox enjoys the largest market share in the world in Indonesia.{% endtrans %}</p>
 
     <img src="{{ static('img/foundation/annualreport/2010/kumi.png') }}" width="134" height="104" style="margin-left: 150px" alt="Kumi" />
 
@@ -63,9 +63,9 @@
     <figure class="figure">
       <div class="mozilla-video-control">
         <video width="640" height="360" controls="controls" poster="{{ static('img/foundation/annualreport/2010/poster-getinvolved.jpg') }}">
-            <source src="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.webm" type='video/webm; codecs="vp8, vorbis"' />
-            <source src="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-            <source src="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.ogv" type='video/ogg; codecs="theora, vorbis"' />
+            <source src="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.webm" type='video/webm; codecs="vp8, vorbis"' />
+            <source src="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+            <source src="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.ogv" type='video/ogg; codecs="theora, vorbis"' />
         </video>
       </div>
     </figure>
@@ -74,10 +74,10 @@
       <p>{{ _('Mozilla is a fun, diverse community of people from around the world.') }}</p>
       <p class="download">{{ _('Download this video:') }}</p>
       <ul class="download">
-        <li><a href="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.webm">{{ _('WebM format') }}</a></li>
-        <li><a href="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.ogv">{{ _('Ogg Theora format') }}</a></li>
-        <li><a href="//videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.mp4">{{ _('MPEG-4 format') }}</a></li>
-        <li><a href="//www.universalsubtitles.org/en/videos/VPRyx1WZwY6Z/">{{ _('Other languages & sharing') }}</a></li>
+        <li><a href="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.webm">{{ _('WebM format') }}</a></li>
+        <li><a href="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.ogv">{{ _('Ogg Theora format') }}</a></li>
+        <li><a href="https://videos.cdn.mozilla.net/serv/webmademovies/Moz_Doc_0329_GetInvolved_ST.mp4">{{ _('MPEG-4 format') }}</a></li>
+        <li><a href="http://www.universalsubtitles.org/en/videos/VPRyx1WZwY6Z/">{{ _('Other languages & sharing') }}</a></li>
       </ul>
     </div>
   </div>
