--- a/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
@@ -30,8 +30,8 @@
 
       <p>
         {% trans
-          maemo="//blog.mozilla.org/blog/2010/01/29/firefox-for-maemo-now-available/",
-          android="//blog.mozilla.org/blog/2010/11/04/firefox-4-beta-for-mobile-is-now-faster-and-sleeker/"
+          maemo="https://blog.mozilla.org/blog/2010/01/29/firefox-for-maemo-now-available/",
+          android="https://blog.mozilla.org/blog/2010/11/04/firefox-4-beta-for-mobile-is-now-faster-and-sleeker/"
         %}
           Mobile is a critical and growing piece of Internet life. It's important
           to provide people with products that embody Mozilla values of openness,
@@ -52,8 +52,8 @@
 
       <p>
         {% trans
-           home="//blog.mozilla.org/blog/2010/07/15/get-firefox-home-on-your-iphone/",
-           nytimes="//www.nytimes.com/2010/11/11/technology/personaltech/11smart.html"
+           home="https://blog.mozilla.org/blog/2010/07/15/get-firefox-home-on-your-iphone/",
+           nytimes="http://www.nytimes.com/2010/11/11/technology/personaltech/11smart.html"
           %}
           We also created "Firefox Home" -- an app for the iphone that brings a
           range of useful Firefox information and features to iphone users.
@@ -70,18 +70,18 @@
       <figure class="figure">
         <div class="mozilla-video-control">
           <video width="640" height="360" controls="controls" preload="metadata">
-            <source src="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.webm" type="video/webm"/>
-            <source src="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.theora.ogv" type="video/ogg"/>
-            <source src="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.mp4" type="video/mp4"/>
+            <source src="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.webm" type="video/webm"/>
+            <source src="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.theora.ogv" type="video/ogg"/>
+            <source src="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.mp4" type="video/mp4"/>
           </video>
         </div>
       </figure>
       <div class="video-description">
         <p class="download">{{ _('Download this video:') }}</p>
         <ul class="download">
-          <li><a href="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.webm">{{ _('WebM format') }}</a></li>
-          <li><a href="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.theora.ogv">{{ _('Ogg Theora format') }}</a></li>
-          <li><a href="//videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.mp4">{{ _('MPEG-4 format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.webm">{{ _('WebM format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.theora.ogv">{{ _('Ogg Theora format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/mobile/meetFFXmobile2-640x360.mp4">{{ _('MPEG-4 format') }}</a></li>
         </ul>
       </div>
     </li>
@@ -119,16 +119,16 @@
       <figure class="figure">
         <div class="mozilla-video-control">
           <video width="640" height="360" controls="controls" preload="metadata">
-            <source src="//videos.cdn.mozilla.net/labs/openwebapps/openwebapps.webm" type="video/webm"/>
-            <source src="//videos.cdn.mozilla.net/labs/openwebapps/openwebapps.ogv" type="video/ogg"/>
+            <source src="https://videos.cdn.mozilla.net/labs/openwebapps/openwebapps.webm" type="video/webm"/>
+            <source src="https://videos.cdn.mozilla.net/labs/openwebapps/openwebapps.ogv" type="video/ogg"/>
           </video>
         </div>
       </figure>
       <div class="video-description">
         <p class="download">{{ _('Download this video:') }}</p>
         <ul class="download">
-          <li><a href="//videos.cdn.mozilla.net/labs/openwebapps/openwebapps.webm">{{ _('WebM format') }}</a></li>
-          <li><a href="//videos.cdn.mozilla.net/labs/openwebapps/openwebapps.ogv">{{ _('Ogg Theora format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/labs/openwebapps/openwebapps.webm">{{ _('WebM format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/labs/openwebapps/openwebapps.ogv">{{ _('Ogg Theora format') }}</a></li>
         </ul>
       </div>
     </li>
@@ -137,7 +137,7 @@
       <h4 class="section-title" id="services">{{ _('Sharing, Data and Services') }}</h4>
 
       <p>
-        {% trans f1="//f1.mozillamessaging.com/" %}
+        {% trans f1="http://f1.mozillamessaging.com/" %}
         People are generating immense amounts of digital information about
         themselves. Right now there's no good way for an individual to control
         or manage the information we generate other than to rely on the
@@ -159,18 +159,18 @@
       <figure class="figure">
         <div class="mozilla-video-control">
           <video width="640" height="360" controls="controls" preload="metadata">
-            <source src="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.webm" type="video/webm"/>
-            <source src="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x3%23161DA3.ogv" type="video/ogg"/>
-            <source src="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.mp4" type="video/mp4"/>
+            <source src="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.webm" type="video/webm"/>
+            <source src="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x3%23161DA3.ogv" type="video/ogg"/>
+            <source src="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.mp4" type="video/mp4"/>
           </video>
         </div>
       </figure>
       <div class="video-description">
         <p class="download">{{ _('Download this video:') }}</p>
         <ul class="download">
-          <li><a href="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.webm">{{ _('WebM format') }}</a></li>
-          <li><a href="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x3%23161DA3.ogv">{{ _('Ogg Theora format') }}</a></li>
-          <li><a href="//videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.mp4">{{ _('MPEG-4 format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.webm">{{ _('WebM format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x3%23161DA3.ogv">{{ _('Ogg Theora format') }}</a></li>
+          <li><a href="https://videos.cdn.mozilla.net/serv/firefox4beta/syncvideo5final640x360.mp4">{{ _('MPEG-4 format') }}</a></li>
         </ul>
       </div>
     </li>
@@ -183,11 +183,11 @@
       <p>
         {% trans
           logo=static('img/foundation/annualreport/2009/drumbeat-logo.jpg'),
-          webcraft="//www.drumbeat.org/webcraft",
-          festival="//www.drumbeat.org/festival",
-          movies="//www.drumbeat.org/webmademovies",
-          subtitles="//www.drumbeat.org/universal-subtitles/",
-          fund="https://sendto.mozilla.org/"
+          webcraft="http://www.drumbeat.org/",
+          festival="http://www.drumbeat.org/",
+          movies="http://www.drumbeat.org/",
+          subtitles="http://www.drumbeat.org/",
+          fund="https://donate.mozilla.org/"
         %}
           <img src="{{ logo }}" width="100" height="95" align="left" alt="">
           Mozilla's work to build openness and empowerment into the Internet has historically
