--- a/bedrock/foundation/templates/foundation/annualreport/2010/index.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/index.html
@@ -14,9 +14,9 @@
   <figure class="figure">
     <div class="mozilla-video-control">
       <video width="640" height="360" controls="controls" poster="{{ static('img/foundation/annualreport/2010/poster-manifesto.jpg') }}">
-        <source src="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm" type='video/webm; codecs="vp8, vorbis"' />
-        <source src="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-        <source src="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.theora.ogv" type='video/ogg; codecs="theora, vorbis"' />
+        <source src="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm" type='video/webm; codecs="vp8, vorbis"' />
+        <source src="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+        <source src="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.theora.ogv" type='video/ogg; codecs="theora, vorbis"' />
       </video>
     </div>
   </figure>
@@ -26,10 +26,10 @@
     <p>{{ _('What’s Mozilla all about? Why are we doing this? We’re glad you asked.') }}</p>
     <p class="download">{{ _('Download this video:') }}</p>
     <ul class="download">
-      <li><a href="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm">{{ _('WebM format') }}</a></li>
-      <li><a href="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.theora.ogv">{{ _('Ogg Theora format') }}</a></li>
-      <li><a href="//videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4">{{ _('MPEG-4 format') }}</a></li>
-      <li><a href="//www.universalsubtitles.org/en/videos/NNxEqfuQSaPN/">{{ _('Other languages & sharing') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm">{{ _('WebM format') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.theora.ogv">{{ _('Ogg Theora format') }}</a></li>
+      <li><a href="https://videos.cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.mp4">{{ _('MPEG-4 format') }}</a></li>
+      <li><a href="http://www.universalsubtitles.org/en/videos/NNxEqfuQSaPN/">{{ _('Other languages & sharing') }}</a></li>
     </ul>
   </div>
 
